--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -45,10 +45,15 @@
         <h1 id="title"></h1>
         <p id="author"></p>
         </div>
+<!-- Toggle button not working, default hidden not display that way -->
         <p id='complete'></p>
-        <p id='genre'></p>
+        <div class="progress-toggle">
+          <p class="complete-toggle hidden">COMPLETE</p>
+          <p class="ongoing-toggle hidden">ON GOING</p>
+        </div>
+        <p id="genre"></p>
       </div>
-      <p id='story-text'></p>
+      <p id="story-text"></p>
   <!--------------- BLOCK FORM------------------------------------------------------------->
   <section class="new-block hidden">
 
