Fix 500 error by removing script tag in index.ejs and fix the loadStory error by moving function definitions inside doc ready and before func call

--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -47,7 +47,7 @@
         </div>
 <!-- Toggle button not working, default hidden not display that way -->
         <p id='complete'></p>
-        <div class="progress-toggle">
+        <div class="progress-toggle hidden">
           <p class="complete-toggle hidden">COMPLETE</p>
           <p class="ongoing-toggle hidden">ON GOING</p>
         </div>
