--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -32,7 +32,7 @@
 <body id="new-story-body">
   <header id="new-story-header">
     <div class="side-panel-top new-story-left-header">
-      <h2>Wb;</h2>
+      <h2><a href="/">Wb;</a></h2>
     </div>
 
     <div class="new-story-right-header">
