--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -45,7 +45,6 @@ html {
 .title-author-label {
   display: flex;
   flex-direction: row;
-  margin-bottom: 1.6rem;
 }
 
 .wrapper-story {
@@ -82,12 +81,12 @@ html {
 
 #story-text {
   font-size: 1.6rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 #title {
   font-weight: bold;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .add-block-btn {
@@ -164,7 +163,7 @@ html {
 
 .contribution-title {
   font-weight: bold;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .contribution-flavour {
@@ -349,7 +348,6 @@ option {
   display: flex;
   flex-direction: row;
   margin: 0.2rem;
-  margin-bottom: 3rem;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   text-transform: uppercase;
@@ -365,7 +363,7 @@ option {
   border-color: $black;
   border-width: .2rem;
   padding: 1rem;
-  margin: 1rem;
+  margin: 0rem 1rem;
 
 }
 
@@ -374,7 +372,6 @@ option {
   border: solid;
   border-color: $black;
   border-width: .2rem;
-  padding-bottom: 1rem;
-  word-break: none;
-  margin: 1rem
+  padding: 1rem;
+  margin: 0rem 1rem;
 }
