--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -49,7 +49,7 @@
         <p id='complete'></p>
         <div class="progress-toggle hidden">
           <p class="complete-toggle hidden">COMPLETE</p>
-          <p class="ongoing-toggle hidden">ON GOING</p>
+          <p class="ongoing-toggle pressed-ongoing hidden">ON GOING</p>
         </div>
         <p id="genre"></p>
       </div>
@@ -84,7 +84,7 @@
   </section>
   <!--------------- BLOCK FORM------------------------------------------------------------->
 
-      <div class='add-block-btn'>
+      <div class="add-block-btn">
         <i class="fas fa-plus"></i>
         <p>Add a block</p>
       </div>
