--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -58,6 +58,7 @@ html {
   padding-left: 1rem;
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 #genre {
@@ -67,6 +68,7 @@ html {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
+  white-space: nowrap;
 }
 
 #complete {
@@ -76,6 +78,7 @@ html {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
+  white-space: nowrap;
 }
 
 #story-text {
@@ -159,6 +162,7 @@ html {
   padding-left: 1rem;
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .contribution-title {
