Create script file for upvote/downvote feature and import to story_page.ejs header

--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -18,6 +18,7 @@
     let userID = <%= userID %>
   </script>
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/upvotes.js"></script>
 
 
   <!-- Bootstrap CSS -->
