Add container for accepted-contributions

--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -54,6 +54,7 @@
         <p id="genre"></p>
       </div>
       <p id="story-text"></p>
+      <div id="accepted-contributions-container"></div>
   <!--------------- BLOCK FORM------------------------------------------------------------->
   <section class="new-block hidden">
 
