Always hide 'Writer's Block' in side panel but keep in DOM for SEO and accessibility reasons

--- a/styles/components/partials/_side_panel.scss
+++ b/styles/components/partials/_side_panel.scss
@@ -33,9 +33,8 @@
 
   /*Writer's Block text underneath logo*/
   h3 {
-    font-size: $l-size;
-    font-family: 'Spartan', Arial, sans-serif;
-    margin-left: 2.4rem;
+    visibility: hidden;
+    height: 0;
   }
 }
 
