--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 
+  <script type="text/javascript" src="/scripts/home.js"></script>
+
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -26,6 +29,25 @@
 </head>
 
 <body id="body">
+   <!-------------- LANDING DIV ----------------------------->
+   <div class="landing-div">
+    <div class="landing-wb-brand-panel">
+      <p class="repeat-wb" id ="wb1">Writer's <br> Block;</p>
+      <p class="repeat-wb" id ="wb2">Writer's <br> Block;</p>
+      <p class="repeat-wb" id ="wb3">Writer's <br> Block;</p>
+      <p class="repeat-wb" id ="wb4">Writer's <br> Block;</p>
+    </div>
+
+    <div class="wb-description">
+      <p class="slogan">It’s not a problem,<br> it’s a solution. </p>
+      <hr class="line"></hr>
+
+      <p class="description">If you ever feel stuck or daunted by writing a story, you aren’t alone.  <br>So why not write together, in blocks, you get it? <br> <br>Be inspired, share, collaborate on other stories. </p>
+      <div class="get-started-btn">GET STARTED</div>
+    </div>
+
+  </div>
+  <!-------------------------------------------------------->
 
   <div class="side-panel-container">
     <%- include('./partials/_side_panel') %>
@@ -33,7 +55,7 @@
 
   <div class="main-body text-body">
     <div class="homepage-wrapper">
-        <h1>
+        <h1 data-id="<%= userID %>">
           Welcome<%= userName && `, ${userName}` %>!
           <a href="/stories/new" title="Create a Story"><i class="fas fa-pencil-alt fa-lg" id="pencil"></i></a>
         </h1>
