Use sass variable name

--- a/styles/components/partials/_side_panel.scss
+++ b/styles/components/partials/_side_panel.scss
@@ -53,7 +53,7 @@
 
 /*Side panel login/logout button*/
 .side-panel-bottom button {
-  background: #E1CF8D;
+  background: $gold;
   border-radius: 50px;
   border: none;
   height: 3.5rem;
