--- a/views/partials/_side_panel.ejs
+++ b/views/partials/_side_panel.ejs
@@ -19,7 +19,7 @@
         </form>
         <!-- Button logs in as user 2 for now until form is implemented -->
         <form method="POST" action="/users/login/2">
-          <button>Login</button>
+          <button class="login-button">Login</button>
         </form>
       </div>
     <% } %>
