Add landing div to slide down for new users

--- a/views/pages/story_page.ejs
+++ b/views/pages/story_page.ejs
@@ -19,6 +19,7 @@
   </script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/upvotes.js"></script>
+  <script type="text/javascript" src="/scripts/home.js"></script>
 
 
   <!-- Bootstrap CSS -->
@@ -40,7 +41,16 @@
   <!--------------- SPECIFIC STORY FULL ------------------------------------------------------------->
 
   <div class="main-body story-container">
+
     <div class="wrapper-story">
+
+
+        <a class="create-story-btn" href="/stories/new" title="Create a Story">
+          <p> Create a Story</p>
+          <i class="fas fa-pencil-alt fa-lg" id="writer-tool"></i>
+        </a>
+
+
       <div class ="story-heading">
         <div class ="title-author-label">
         <h1 id="title"></h1>
