add background to side panel

--- a/views/partials/_side_panel.ejs
+++ b/views/partials/_side_panel.ejs
@@ -5,8 +5,8 @@
   </div>
 
   <div class="side-panel-bottom">
-    <h2><span>Popular Read: </span><br> <%= stories[2].title %></h2>
-    <p><%= stories[2].flavour_text %></p>
+    <h2><span>Popular Read: </span><br> <%= stories[stories.length-2].title %></h2>
+    <p><%= stories[stories.length-2].flavour_text %></p>
     <% if (userName) { %>
       <form method="POST" action="/users/logout" class="register-login logged-in">
         <p>Hello, <%= userName %>!</p>
