Format space and unnecessary comments

--- a/styles/components/pages/home_page.scss
+++ b/styles/components/pages/home_page.scss
@@ -26,8 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow:
-    rgba(0, 0, 0, 0.35) 0px 5px 10px;
+    box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 10px;
   }
 
   #pencil {
@@ -44,7 +43,7 @@
   background-color: #19191F;
   z-index: 10;
   background-color: #19191f;
-background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
 
 .landing-wb-brand-panel {
