--- a/styles/base.scss
+++ b/styles/base.scss
@@ -11,7 +11,7 @@ html {
 $gray: #636363;
 $white: #ffffff;
 $black: #000000;
-$purp: #6117ff;
+$purp: rgba(148, 38, 54, 1);
 $gold: #E1CF8D;
 
 // Fonts
