fix overlay issue in mobile view

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -65,6 +65,11 @@ body {
     }
   }
 
+  #side-panel::after {
+    content: "";
+    display: none;
+  }
+
   /*MAIN BODY RESPONSIVE DESIGN*/
   .main-body {
     margin: 0;
