--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -189,7 +189,7 @@ h1.accepted-contribution {
 
 .contribution-flavour {
   font-size: 1.6rem;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .upvote {
@@ -244,7 +244,7 @@ tag {
   color: $purp;
   margin-bottom: 1rem;
   margin-top: 2rem;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .full-contribution-footer {
