--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -12,6 +12,7 @@ body {
   box-shadow: 0 15px 40px 3px rgba(0, 0, 0, 0.56);
 }
 
+/*White area to the right of side-panel where the main content for each page goes*/
 .main-body {
   flex: 1;
   /*needs left margin otherwise would position itself underneath side panel*/
@@ -70,7 +71,6 @@ body {
     margin: 0;
     width: 100vw;
   }
-
 }
 
 /*For even smaller screens*/
