--- a/styles/components/pages/story_page.scss
+++ b/styles/components/pages/story_page.scss
@@ -5,7 +5,7 @@
 // $gray: #636363;
 // $white: #ffffff;
 // $black: #000000;
-// $purp: #6117ff;
+// $maroon: #6117ff;
 // $gold: #E1CF8D;
 
 // // Spacing
@@ -121,7 +121,7 @@ h1.accepted-contribution {
   text-transform: uppercase;
   letter-spacing: 0.25rem;
   font-size: 1.4rem;
-  color: $purp;
+  color: $maroon;
   padding-left: 1rem;
 }
 
@@ -201,10 +201,10 @@ h1.accepted-contribution {
 }
 
 i {
-  color: $purp;
+  color: $maroon;
 }
 i:hover {
-  color: $purp;
+  color: $maroon;
   cursor: pointer;
   position: relative;
   animation-name: bounce;
@@ -241,7 +241,7 @@ tag {
 
 .contribution-text {
   font-size: 1.6rem;
-  color: $purp;
+  color: $maroon;
   margin-bottom: 1rem;
   margin-top: 2rem;
   word-break: break-all;
@@ -482,7 +482,7 @@ option {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.25rem;
-  color: $purp;
+  color: $maroon;
   font-size: 1.4rem;
   text-decoration: none;
   padding-bottom: 2rem;
