Clean up homepage and side panel ejs files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 </head>
 
 <body id="body">
-   <!-------------- LANDING DIV ----------------------------->
+   <!--LANDING DIV -->
    <div class="landing-div">
     <div class="landing-wb-brand-panel">
       <p class="repeat-wb" id ="wb1">Writer's <br> Block;</p>
@@ -45,9 +45,7 @@
       <p class="description">If you ever feel stuck or daunted by writing a story, you aren’t alone.  <br>So why not write together, in blocks, you get it? <br> <br>Be inspired, share, collaborate on other stories. </p>
       <div class="get-started-btn">GET STARTED</div>
     </div>
-
   </div>
-  <!-------------------------------------------------------->
 
   <div class="side-panel-container">
     <%- include('./partials/_side_panel') %>
