Remove register button functionality and make image not required in create story form
for demonstration purposes

--- a/views/pages/stories_new.ejs
+++ b/views/pages/stories_new.ejs
@@ -54,7 +54,7 @@
         </div>
         <div class="story-forms-labels">
           <label class="new-story" for="cover_photo">PHOTO:</label>
-          <input class="form-control" type="text" name="cover_photo" required>
+          <input class="form-control" type="text" name="cover_photo">
         </div>
         <textarea class="form-control" id="form-story-text" type="text" name="text" required></textarea>
         <div id="story-form-footer">
